--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 	<head>
-        <meta name="google-site-verification" content="sJBTJibHZ7DsWHqDjTgD2Hn9glOlvqZrtwkys0pTBSs" />
+        <meta name="google-site-verification" content="YMzyoLkGZTJy4WQ-YUKu4kkVYj19prbFyqfOJL6gWvk" />
 		<link rel="amphtml" href="https://adspetir.click/kansaspool/toto30/">
 		<title>TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED</title>
 		<meta charset="utf-8">
@@ -20,7 +20,7 @@
 		<meta property="og:type" content="product" />
 		<meta property="og:site_name" content="TOTO868" />
 		<meta property="og:title" content="TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED" />
-		<meta property="og:url" content="http://245037.osinthijacking.itmo.xyz/" />
+		<meta property="og:url" content="https://asdasdsdfwe.xyz/" />
 		<meta property="og:description" content="TOTO868 adalah website bandar togel online dan game spin turbo terbaru di tahun 2024 dengan jaminan scatter hingga X5000." />
 		<meta property="og:price:amount" content="5000.00" />
 		<meta property="og:price:currency" content="IDR" />
@@ -34,7 +34,7 @@
 		<!-- Big Cartel generated link tags -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
-		<link rel="canonical" href="http://245037.osinthijacking.itmo.xyz/" />
+		<link rel="canonical" href="https://asdasdsdfwe.xyz/" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:400,500,700|Marcellus&amp;display=swap" type="text/css" title="Google Fonts" />
 		<!-- end of generated link tags -->
 
@@ -48,7 +48,7 @@
 							"@type":"ListItem",
 							"position":1,
 							"name":"Home",
-							"item":"http://245037.osinthijacking.itmo.xyz/"
+							"item":"https://asdasdsdfwe.xyz/"
 						},{
 							"@type":"ListItem",
 							"position":2,"name":
@@ -58,7 +58,7 @@
 							"@type":"ListItem",
 							"position":3,
 							"name":"TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED",
-							"item":"http://245037.osinthijacking.itmo.xyz/"
+							"item":"https://asdasdsdfwe.xyz/"
 						}]
 			}
 		</script>
@@ -67,7 +67,7 @@
 				"@context":"https://schema.org/",
 				"@type":"Product",
 				"name":"TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED",
-				"url":"http://245037.osinthijacking.itmo.xyz/",
+				"url":"https://asdasdsdfwe.xyz/",
 				"image": [ "https://i.postimg.cc/ydSw6Ndw/Untitled-design-7-min.png" ],
 				"description":"TOTO868 adalah website bandar togel online dan game spin turbo terbaru di tahun 2024 dengan jaminan scatter hingga X5000.",
 				"brand":{"@type":"Brand","name":"TOTO868"},
@@ -104,7 +104,7 @@
 					[{
 						"@type":"Offer",
 						"name":"TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED",
-						"url":"http://245037.osinthijacking.itmo.xyz/",
+						"url":"https://asdasdsdfwe.xyz/",
 						"price":"10000.0",
 						"priceCurrency":"IDR",
 						"priceValidUntil":"2028-08-08",
@@ -175,7 +175,7 @@
 					<nav aria-label="Primary navigation">
 						<ul class="overlay-page-list">
 							<li><a href="https://adspetir.click/kansaspool/toto30/">Products</a></li>
-							<li><a href="http://245037.osinthijacking.itmo.xyz/">Contact</a></li>
+							<li><a href="https://asdasdsdfwe.xyz/">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -192,12 +192,12 @@
 			<nav aria-label="Main" class="top-nav--links">
 				<ul>
 					<li><a href="https://adspetir.click/kansaspool/toto30/">Products</a></li>
-					<li><a href="http://245037.osinthijacking.itmo.xyz/">Contact</a></li>
+					<li><a href="https://asdasdsdfwe.xyz/">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
 		<header>
-			<a href="http://245037.osinthijacking.itmo.xyz/" title="TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED" class="header-store-link header-store-link--text">
+			<a href="https://asdasdsdfwe.xyz/" title="TOTO868 : WEBSITE BANDAR TOGEL ONLINE & GAME SPIN TURBO TERBARU 2024 RASAKAN SCATTER X5000 GUARANTEED" class="header-store-link header-store-link--text">
 				TOTO868			</a>
 		</header>
 		<main id="main">
@@ -232,7 +232,7 @@
 						</div>
 						<p><a title="TOTO868" href="https://cutt.ly/veaAeivi" target="_blank" rel="noopener"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://png.pngtree.com/png-clipart/20221018/ourmid/pngtree-daftar-sekarang-label-png-image_6351422.png" alt="" width="480" height="240" /></a></p>
 							<p>
-								<a href="http://245037.osinthijacking.itmo.xyz/">TOTO868</a> menyediakan permainan terlengkap dengan layanan aman dan nyaman dengan coustemer service berpengalaman, pastikan anda mendapatkan kemenangan disitus terbaik TOTO868  berlisensi resmi 2024.</p>
+								<a href="https://asdasdsdfwe.xyz/">TOTO868</a> menyediakan permainan terlengkap dengan layanan aman dan nyaman dengan coustemer service berpengalaman, pastikan anda mendapatkan kemenangan disitus terbaik TOTO868  berlisensi resmi 2024.</p>
 						</div>
 					</section>
 				</div>
@@ -241,8 +241,8 @@
 		<footer>
 			<nav class="footer-nav--links" aria-label="Secondary">
 				<ul>
-					<li><a href="http://245037.osinthijacking.itmo.xyz/">Home</a></li>
-					<li><a href="http://245037.osinthijacking.itmo.xyz/">Contact</a></li>
+					<li><a href="https://asdasdsdfwe.xyz/">Home</a></li>
+					<li><a href="https://asdasdsdfwe.xyz/">Contact</a></li>
 				</ul>
 			</nav>
 			<a class="bigcartel-credit" href="https://www.bigcartel.com/" title="Powered by Big Cartel">
